--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.5
+  get_it: ^8.0.0
+  flutter_inappwebview: ^6.0.0
+  connectivity_plus: ^5.0.2
+  shared_preferences: ^2.2.3
+  page_transition: ^2.1.0
+  flutter_localization: ^0.2.2
+  provider: ^6.1.2
+  rxdart: ^0.28.0
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +71,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - assets/i18n/
+    - assets/i18n/ar.json
+    - assets/i18n/en.json
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
