--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,11 +50,20 @@ dependencies:
   sizer: ^3.0.4
   gamemap:
     path: packages/gamemap
+  lottie: ^1.2.1
+  flutter_native_splash: ^2.2.0+1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_native_splash:
+  color: "#f7f6f1"
+  color_dark: "#272727"
+  image: "assets/splash/Liberty logo .png"
+  image_dark: "assets/splash/Liberty logo .png"
+  
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -82,6 +91,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/images/
+    - assets/images/splash/
     - assets/i18n/
     - assets/i18n/ar.json
     - assets/i18n/en.json
